tests/ui/input.stderr
error: expected `#[culit(local)]` or `#[culit]`
 --> tests/ui/input.rs:9:9
  |
9 | #[culit(no input allowed)]
  |         ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/input.rs:10:13
   |
10 | fn main() {}
   |             ^ consider adding a `main` function to `$DIR/tests/ui/input.rs`
